Fix md-align-tabs styling and add demo

--- a/app/styles/components/tabs.scss
+++ b/app/styles/components/tabs.scss
@@ -36,8 +36,17 @@ md-tabs {
     min-height: 200 + $tabs-header-height;
   }
   &[md-align-tabs="bottom"] {
-    padding-bottom: $tabs-header-height;
-    position: relative;
+    md-tabs-wrapper {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: $tabs-header-height;
+    }
+    md-tabs-content-wrapper {
+      top: 0;
+      bottom: $tabs-header-height;
+    }
   }
   &[md-dynamic-height] {
     md-tabs-content-wrapper {
@@ -53,15 +62,6 @@ md-tabs {
       &.md-active {
         position: relative;
       }
-    }
-  }
-  &[md-align-tabs="bottom"] {
-    md-tabs-wrapper {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: $tabs-header-height;
     }
   }
   &[md-border-bottom] {
@@ -137,6 +137,11 @@ md-tabs-canvas {
   position: relative;
   overflow: hidden;
   display: block;
+  .md-dummy-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
   &.md-paginated {
     margin: 0 $tabs-paginator-width;
   }
